--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,12 @@
 name: Deploy to ECR
-
 on:
- 
   push:
     branches: [ main ]
-
-jobs:
-  
-  build:
-    
+jobs:  
+  build:  
     name: Build Image
     runs-on: ubuntu-latest
-
-   
     steps:
-
     - name: Checkout repo
       uses: actions/checkout@v3
     
@@ -23,6 +15,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: arn:aws:iam::759879173549:user/ECR_USER
         aws-region: eu-central-1
 
     - name: Login to Amazon ECR
@@ -35,7 +28,7 @@ jobs:
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: test_ml_demo
-        IMAGE_TAG: test_ml_image
+        IMAGE_TAG: ${{ github.sha }}
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+        docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
